fix label elem spacing

--- a/web_stuff/src/style.scss
+++ b/web_stuff/src/style.scss
@@ -572,7 +572,7 @@ hr {
   height: max-content;
 }
 
-div {
+div, label {
   margin: 0;
 }
 
